--- a/server/package.json
+++ b/server/package.json
@@ -15,19 +15,30 @@
   "devDependencies": {
     "@biomejs/biome": "catalog:",
     "@types/bun": "^1.2.22",
-    "drizzle-kit": "^0.31.4"
+    "@types/pg": "^8.15.5",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-typebox": "^0.3.3",
+    "picocolors": "^1.1.1"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.4.0",
+    "@elysiajs/openapi": "^1.4.10",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "elysia": "latest",
+    "elysia-autoload": "^1.7.0",
     "pg": "^8.16.3"
   },
-  "trustedDependencies": ["@biomejs/biome"],
+  "trustedDependencies": [
+    "@biomejs/biome"
+  ],
   "exports": {
     ".": "./src/exports.ts"
   },
   "peerDependencies": {
     "typescript": "^5.9.2"
+  },
+  "overrides": {
+    "@sinclair/typebox": "0.34.0"
   }
 }
