--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,6 +6,9 @@
     "moduleDetection": "force",
     "jsx": "react",
     "allowJs": true,
+    "paths": {
+      "$/*": ["./src/*"]
+    },
 
     // Bundler
     "moduleResolution": "bundler",
