--- a/server/biome.json
+++ b/server/biome.json
@@ -1,6 +1,9 @@
 {
   "$schema": "../node_modules/@biomejs/biome/configuration_schema.json",
   "extends": ["../biome.json"],
+  "files": {
+    "includes": ["!**/bun.lock"]
+  },
   "linter": {
     "enabled": true,
     "rules": {
