--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "biome format",
+    "format:write": "biome format --write",
+    "lint": "biome lint",
+    "lint:write": "biome lint --write",
+    "check": "biome check"
   },
   "dependencies": {
     "@cycl3d/server": "workspace:",
