--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,24 +2,27 @@ FROM oven/bun:latest-alpine AS base
 
 FROM base AS builder
 RUN apk update
-WORKDIR /server
-RUN bun global add turbo@^2
+RUN apk add --no-cache libc6-compat
+WORKDIR /app
+RUN bun install -g turbo@^2
 COPY . .
-RUN turbo prune server --docker
+RUN turbo prune @cycl3d/server --docker
 
 FROM base AS installer
 RUN apk update
-WORKDIR /server
-COPY --from=builder /server/out/json/ .
+RUN apk add --no-cache libc6-compat
+WORKDIR /app
+
+COPY --from=builder /app/out/json/ .
 RUN bun install --frozen-lockfile 
 COPY --from=builder /server/out/full/ .
-RUN bun build
+RUN bun turbo build
 
 FROM base AS runner
-WORKDIR /server
+WORKDIR /app
 RUN addgroup --system --gid 1001 runner
 RUN adduser --system --uid 1001 bunny
 USER bunny
 
-COPY --from=installer --chown=runner:bunny /server/server ./server
+COPY --from=installer --chown=runner:bunny /app ./
 CMD bun start
