--- a/server/.env.example
+++ b/server/.env.example
@@ -11,3 +11,4 @@ PGDATABASE="postgres"
 
 # API tokens / endpoints / etc
 GEOSERVER_BASE="http://localhost:8080/geoserver"
+STATIC_PATH="./public"  # Path of static files to be served (e.g. webpage or)
