--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,54 +6,25 @@ services:
     build: .
     restart: unless-stopped
     ports:
-      - "3000:3000"
+      - 80:3000
     networks:
       - cycl3d_network
     env_file: "./server/.env.production"
+    volumes:
+      - cycl3d_volume:/app
     environment:
       - PGHOST=host.docker.internal
       - PGUSER=geoserver
       - PGDATABASE=advanced_gis
-      - GEOSERVER_BASE=http://geoserver:8080/geoserver
+      - GEOSERVER_BASE=https://geoserver.seanbrooker.com/geoserver
     extra_hosts:
       - "host.docker.internal:172.17.0.1"
-
-  geoserver:
-    container_name: cycl3d-geoserver
-    image: byrix/geoserver:2.28.x
-    ports:
-      - "8080:8080"
-    volumes:
-      - ./geoserver/data:/opt/geoserver_data/:Z
-      - ./geoserver/additional_libs:/opt/additional_libs/:Z
-    env_file: ./.geoserver.env
-    environment:
-      - CORS_ENABLED=true
-      - SKIP_DEMO_DATA=true
-      - POSTGRES_JNDI_ENABLED=true
-      - POSTGRES_JNDI_RESOURCE_NAME=jdbc/postgres
-      - POSTGRES_HOST=host.docker.internal
-      - POSTGRES_DB=advanced_gis
-    healthcheck:
-      test: curl --fail "http://localhost:8080/geoserver/web/wicket/resource/org.geoserver.web.GeoServerbasePage/img/logo.png" || exit 1
-      interval: 60m
-      retries: 3
-      timeout: 20s
-    extra_hosts:
-      - "host.docker.internal:172.17.0.1"
-    restart: unless-stopped
-    networks:
-      - cycl3d_network
-
-  cloudflared:
-    container_name: cloudflared
-    image: cloudflare/cloudflared
-    restart: unless-stopped
-    command: tunnel run
-    env_file: ".cloudflare.env"
-    networks:
-      - cycl3d_network
+      - "geoserver:172.18.0.2"
 
 networks:
   cycl3d_network:
     external: true
+
+volumes:
+  cycl3d_volume:
+    name: cycl3d_volume
